<resources>
    <string name="app_name">Motobat</string>

    <string name="hello_world">Moto Times мотобат</string>
    <string name="action_about">О приложении</string>
    <string name="title_activity_new_point">NewPointActivity</string>
    <string name="where">Где:</string>

    <string-array name="man_acvitity_spinner_array">
        <item>Указать</item>
        <item>Активен</item>
        <item>Не активен</item>
        <item>Не известно</item>
    </string-array>
    <string-array name="man_vehicle_spinner_array">
        <item>Указать</item>
        <item>РТ</item>
        <item>Гусь</item>
        <item>Другой</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="auth_header">Для входа используйте учетные данные ВКонтакте.</string>
    <string name="auth_logged_status">Статус: %1$s.</string>
    <string name="auth_role">Роль: %1$s.</string>
    <string name="auth_user_name">Имя: %1$s.</string>
    <string name="auth_role_un_set">Не установлена</string>
    <string name="create_cancel">Отмена</string>
    <string name="logout_button">Выход</string>
    <string name="login_button">Вход</string>
    <string name="auth_password_error">Не удалось авторизоваться. Возможно неверно введен логин или пароль.</string>
    <string name="auth_not_available">Авторизация не возможна, пожалуйста, проверьте доступность Internet.</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="role_developer">Разработчик</string>
    <string name="role_admin">администратор</string>
    <string name="role_moderator">модератор</string>
    <string name="role_user">пользователь</string>
    <string name="role_read_only">только чтение</string>
    <string name="title_activity_vklogin">VKLoginActivity</string>
    <string name="is_authorized">Статус: авторизован</string>
    <string name="is_not_authorized">Статус: не авторизован</string>
    <string name="map_provider_category">Карта</string>
    <string name="mc_create_back_button">Назад</string>
    <string name="mc_create_create">Готово</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_info">Служит для отслеживания местоположений сотрудников ГИБДД и в частности мотобата в реальном времени.</string>
    <string name="about_group_info">Для того чтобы иметь возможность отмечать местоположение инспекторов, ваш ВК-аккаунт должен быть одобрен администрацией в группе <a href="https://vk.com/mototimes">MOTO TIMES</a>.</string>
</resources>
