<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mototime.motobat.activity.NewPointActivity">

    <LinearLayout
        android:id="@+id/map_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"  >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" >

            <fragment
                android:id="@+id/mc_create_map_container"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="322dp" />

            <ImageView
                android:id="@+id/mc_create_map_pointer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/map_provider_category"
                android:src="@drawable/target" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сохранить адрес"
                android:id="@+id/address_confirm_btn"
                android:layout_gravity="center_horizontal|bottom" />
        </FrameLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/detail_page"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="322dp"
        android:shrinkColumns="1"
        android:stretchColumns="1,2">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/where"/>

            <TextView
                android:id="@+id/create_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="Активность инспектора" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manAcvititySpinner"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="Тип ТС" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicleTypeSpinner" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Описание"
                android:id="@+id/commentTextView"
                android:layout_span="2" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/mc_create_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:weightSum="1.5" >

        <Button
            android:id="@+id/point_create_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/create_cancel" />

        <Button
            android:id="@+id/point_create_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:text="@string/mc_create_back_button" />

        <Button
            android:id="@+id/point_create_create"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/mc_create_create" />
    </LinearLayout>
</LinearLayout>
